# Parallel-K-Means

./: CMakeLists.txt  Makefile
Analysis/: parallel_call_graph  sequential_call_graph
callgrind_results/: callgrind.parallel  callgrind.seq
